--- a/_css/styles.css
+++ b/_css/styles.css
@@ -1,27 +1,23 @@
 
-body { background-color: #f8f1e9;
+body {
 /* color: #010000; */
 
 }
-h2 {
-    background: url(_img/background.jpg);
-    position: fixed;
-    background-size: contain;
-    background-repeat: no-repeat;
-    max-width: 1920px;
-    max-height: auto;
-    opacity: .5;
-    
+#container {
+    background-image: url(../_img/background.jpg);
+    background-size: 100%;
+    /*background-color: #000; */
+
 }
 
-h1 {
+/*h1 {
 	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-style: thin;
 	font-size: 25px;
 	color: #D1D3D4;
 	padding: 20px; 
 	margin: auto;
-}
+}*/
 
  
 .homepageimage{
@@ -32,24 +28,22 @@ h1 {
 
 	padding:20px;
 	color:#000;
-}
-
-#container {
-	/*nav bar strip*/
-	background-color: #f8f1e9; 
+    /*box-shadow: 10px 10px 5px #888888;*/
 }
 
 .inset {
-	width: 90%;
+	width: 85%;
 	min-width: 320px; 
-	max-width: 1200px;
+	max-width: 900px;
 	margin: auto;
 	/*text inside the container*/
-	color: #FF0000;
+	/*color: #FF0000;*/
+    /*ext-shadow: 50px 50px;*/
+    /*box-shadow: 10px 10px 5px #888888;*/
 }
 
-header 	{ background-color: #f8f1e9; padding: 10px; }
-#main 	{ background-color: #f8f1e9; padding: 10px; }
+header 	{ /*background-color: #f8f1e9;*/ /*padding: 10px;*/ }
+#main 	{ /*background-color: #f8f1e9;*/ /*padding: 10px; */}
 
 /*-------------------------------------
 | header and footer
@@ -58,10 +52,10 @@ header 	{ background-color: #f8f1e9; padding: 10px; }
 .logo {
 	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-style: thin;
-	font-size: 50px;
+	font-size: 25px;
 	padding: 10px; 
 	margin: auto;
-	color: #D1D3D4;
+	color: #000;
 }
 
 header .logo {
@@ -72,16 +66,25 @@ header .logo {
 /*-------------------------------------
 | nav
 -------------------------------------*/
-nav#mainmenu { text-align: center;
-    padding: 10px;
-text-indent: 80px; }
+#mainmenu{
+    background-size: 85%;
+
+}
+nav#mainmenu { 
+    text-align: center;
+    /*adding: 0px;*/
+    /*text-indent: 0px;*/
+    /*background-color: #eee ;*/
+    background-color: rgba(0,0,0,0.30);
+/*    background-position: center;
+*/    padding: 3px;}
 nav#mainmenu a {
 	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	color: #000000; 
-    padding: 40px;
+	color: #333; 
+    padding: 35px;
 }
 
-nav#mainmenu a:hover { color: #A7A9AC; text-decoration: none; }
+nav#mainmenu a:hover { color: #eee; text-decoration: none; }
 nav#mainmenu a.chosen { color: #B21414; }
 
 
@@ -94,10 +97,11 @@ nav#mainmenu .glyphicon-menu-hamburger {
 	padding: 20px;
 }
 
-nav#mainmenu .menu { display: none; 
+nav#mainmenu .menu { 
+    display: none; 
 	}
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 200px) {
 	nav#mainmenu .glyphicon-menu-hamburger { display: none; }
 	nav#mainmenu .menu { display: block; }
 }
@@ -106,15 +110,15 @@ nav#mainmenu .menu { display: none;
 /*-------------------------------------
 | Pinned Navigation
 -------------------------------------*/
-.pinned nav#mainmenu {
+/*.pinned nav#mainmenu {
 	position: fixed;
 	left: 0px; 
 	right: 0px; 
 	top: 0px; 
 	z-index: 9000;
-}
+}*/
 /*hold the space for the nav once its positioned. */
-.pinned header { margin-bottom: 70px; }
+/*.pinned header { margin-bottom: 70px; }*/
 
 
 
@@ -122,9 +126,10 @@ nav#mainmenu .menu { display: none;
 | Main
 -------------------------------------*/
 #main section {
-	min-height: 600px;
+	min-height: 254px;
 	overflow: hidden;
-	background-color: #ffffff;
+/*	background-color: #ffffff;*/
+    /*box-shadow: 10px 10px 5px #888888;*/
 }
 #main section:nth-of-type(even) { background-color: #55939D; }
 
@@ -138,10 +143,10 @@ img { width: 100%; }
 //LIGHTBOX//*/
 
 @import url(../_fonts/icomoon/style.css);
-body { background-color: #333; 	font-family: Helvetica, Arial, sans-serif; }
+body { /*background-color: #333;*/ 	font-family: Helvetica, Arial, sans-serif; }
 
 #lightboxcontainer { 
-	background-color: #ffffff; 
+	/*background-color: #ffffff;*/ 
 	color: #f8f1e9;
 	width: 1000px;
 	height: 1200px;
