--- a/_css/styles.css
+++ b/_css/styles.css
@@ -3,22 +3,12 @@ body {
 /* color: #010000; */
 
 }
-#container {
+#main_container {
     background-image: url(../_img/background.jpg);
     background-size: 100%;
     /*background-color: #000; */
 
 }
-
-/*h1 {
-	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	font-style: thin;
-	font-size: 25px;
-	color: #D1D3D4;
-	padding: 20px; 
-	margin: auto;
-}*/
-
  
 .homepageimage{
 	max-width: 100%
@@ -28,7 +18,6 @@ body {
 
 	padding:20px;
 	color:#000;
-    /*box-shadow: 10px 10px 5px #888888;*/
 }
 
 .inset {
@@ -36,10 +25,14 @@ body {
 	min-width: 320px; 
 	max-width: 900px;
 	margin: auto;
-	/*text inside the container*/
-	/*color: #FF0000;*/
-    /*ext-shadow: 50px 50px;*/
-    /*box-shadow: 10px 10px 5px #888888;*/
+
+}
+
+#hamburger_menu_toggle { 
+
+    width: 8%;
+    
+   
 }
 
 header 	{ /*background-color: #f8f1e9;*/ /*padding: 10px;*/ }
@@ -66,22 +59,19 @@ header .logo {
 /*-------------------------------------
 | nav
 -------------------------------------*/
-#mainmenu{
-    background-size: 85%;
-
-}
 nav#mainmenu { 
+    background-size: 85%;
     text-align: center;
     /*adding: 0px;*/
     /*text-indent: 0px;*/
     /*background-color: #eee ;*/
     background-color: rgba(0,0,0,0.30);
 /*    background-position: center;
-*/    padding: 3px;}
+*/    padding: 3px;
+}
 nav#mainmenu a {
 	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	color: #333; 
-    padding: 35px;
 }
 
 nav#mainmenu a:hover { color: #eee; text-decoration: none; }
@@ -143,7 +133,8 @@ img { width: 100%; }
 //LIGHTBOX//*/
 
 @import url(../_fonts/icomoon/style.css);
-body { /*background-color: #333;*/ 	font-family: Helvetica, Arial, sans-serif; }
+body { background-color: #333; 	font-family: Helvetica, Arial, sans-serif; 
+}
 
 #lightboxcontainer { 
 	/*background-color: #ffffff;*/ 
